Add last changes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     />
   </head>
   <body>
-    <header role="banner"></header>
-    <main id="main" role="main">
+    <main id="main">
       <section class="age_calc">
-        <form class="calc_form">
-          <nav class="numbers" role="navigation">
+        <form class="calc_form" action="#" method="#">
+          <nav class="numbers">
             <div class="input">
               <label for="day">DAY</label>
               <input type="text" class="day" id="day" placeholder="DD" />
@@ -48,7 +47,6 @@
         </form>
       </section>
     </main>
-    <footer role="contentinfo"></footer>
     <script src="assets/main.js"></script>
   </body>
 </html>
