Add last changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main id="main">
       <section class="age_calc">
-        <form class="calc_form" action="#" method="#">
+        <form class="calc_form">
           <nav class="numbers">
             <div class="input">
               <label for="day">DAY</label>
